# VideoBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  logging_config.py  pyproject.toml  requirements.txt
app/: main.py
app/db/: connections.py
app/video/: crud.py  model.py  routers.py  schemas.py
